--- a/css/style.css
+++ b/css/style.css
@@ -43,132 +43,138 @@ ul {
 }
 
 /*===== MOBILE MENU========================== */
-@media only screen and (max-width: 768px){
-.mobile-menu {
+@media only screen and (max-width: 768px) {
+    .mobile-menu {
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    z-index: 99999999999;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100px;
+        z-index: 99999999999;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-menu.is-open {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .mobile-menu-container {
+        position: relative;
+        background-color: #FFFFFF;
+
+
+    }
+
+    .mobile-menu-close-btn {
+        border: none;
+        border-radius: 50%;
+        width: 24px;
+        height: 24px;
+        fill: #2e2f42;
+        width: 24px;
+        height: 24px;
+        line-height: 0;
+        padding: 0;
+        position: absolute;
+        top: 24px;
+        right: 16px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
+
+    .mobile-menu-list {
+        margin-bottom: 168px;
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        padding: 72px 0px 40px 0px;
+
+    }
+
+    .mobile-menu-link {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11111;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+    }
+
+    .active {
+        color: #404bbf;
+    }
+
+    .mobile-menu-list-address {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 48px;
+        gap: 24px;
+
+    }
+
+    .mobile-menu-address-link {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #434455;
+    }
+
+    .active-address {
+        color: #4d5ae5;
+    }
+
+    .icon-cocial-link {
+        border-radius: 50%;
+        background-color: #4d5ae5;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .list-social {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .icon-cocial {
+        fill: #f4f4fd;
+
+
+    }
+
+    .cocial-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+    }
 }
 
-.mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-}
-
-.mobile-menu-container {
-    position: relative;
-    background-color: #FFFFFF;
-
-    
-}
-
-.mobile-menu-close-btn {
-    border: none;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    fill: #2e2f42;
-    width: 24px;
-    height: 24px;
-    line-height: 0;
-    padding: 0;
-    position: absolute;
-    top: 24px;
-    right: 16px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-
-.mobile-menu-list {
-    margin-bottom: 168px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    padding: 72px 0px 40px 0px;
-
-}
-
-.mobile-menu-link {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11111;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
-
-.active {
-    color: #404bbf;
-}
-
-.mobile-menu-list-address {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 48px;
-    gap: 24px;
-
-}
-
-.mobile-menu-address-link {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-.active-address {
-    color: #4d5ae5;
-}
-
-.icon-cocial-link {
-    border-radius: 50%;
-    background-color: #4d5ae5;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.list-social {
-    display: flex;
-    justify-content: space-between;
-}
-
-.icon-cocial {
-    fill: #f4f4fd;
-
-
-}
-
-.cocial-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-}
-}
-@media only screen and (min-width: 768px){
-.mobile-menu{
-    display: none;
-}
+@media only screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
 }
 
 /* ====================HEADER============================*/
 
+.container {
+    max-width: 320px;
+    padding: 0 16px;
+    margin: 0 auto;
+}
 
 .container-header {
     display: flex;
@@ -194,17 +200,30 @@ span {
     color: #4d5ae5;
 }
 
+.address-mail:hover {
+    color: #404bbf;
+}
+
+.address-mail:focus {
+    color: #404bbf;
+}
+
+.link-header:hover {
+    color: #404BBF;
+}
+
+.link-header:focus {
+    color: #404bbf;
+}
+
 
 @media only screen and (max-width: 768px) {
-    .container {
-        max-width: 320px;
-        padding: 0 16px;
-        margin: 0 auto;
-    }
+
     .list-header,
     .address-header {
         display: none;
     }
+
     .menu-burger-btn {
         fill: #2f2f37;
         border: none;
@@ -224,6 +243,7 @@ span {
         box-shadow: none;
         background: #fff;
     }
+
     .container {
         max-width: 768px;
     }
@@ -248,7 +268,7 @@ span {
         background: #fff;
     }
 
-   
+
     .logo {
         margin-right: 120px;
     }
@@ -301,10 +321,11 @@ span {
         border-radius: 2px;
 
     }
-    .list-address{
+
+    .list-address {
         display: flex;
         flex-direction: column;
-        gap:12px;
+        gap: 12px;
     }
 
     address {
@@ -319,56 +340,62 @@ span {
 
 
 
+
+
 }
+
 /* ========HEADER 1158========================= */
 @media only screen and (min-width: 1158px) {
     .header {
         padding: 24px 0;
-        
+
     }
 
-    .container.container-header  {
+    .container {
         max-width: 1158px;
         padding: 0 15px;
     }
-    
 
 
 
-.list-address {
-    display: flex;
-    flex-direction: row;
-    
-}
-.logo{
-    margin-right: 76px;
-}
 
-.link-header:hover {
-    color: #404BBF;
-}
+    .list-address {
+        display: flex;
+        flex-direction: row;
 
-.link-header:focus {
-    color: #404bbf;
-}
-.list-address{
- 
+    }
+
+    .logo {
+        margin-right: 76px;
+    }
+
+    .link-header:hover {
+        color: #404BBF;
+    }
+
+    .link-header:focus {
+        color: #404bbf;
+    }
+
+    .list-address {
+
         display: flex;
         gap: 40px;
-    
-}
 
-.address-mail{
-    font-size: 16px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-.address-mail:hover {
-    color: #404bbf;
-}
+    }
 
-.address-mail:focus {
-    color: #404bbf;
-}
+    .address-mail {
+        font-size: 16px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .address-mail:hover {
+        color: #404bbf;
+    }
+
+    .address-mail:focus {
+        color: #404bbf;
+    }
 
 }
 
@@ -381,99 +408,104 @@ span {
     max-width: 320px;
     background-size: cover;
     background-color: #2E2F42;
-    padding: 72px 0px ;
+    padding: 72px 0px;
     text-align: center;
     background-repeat: no-repeat;
     background-position: center;
     margin: 0 auto;
-    
+
 }
+
 .container-benefits {
     text-align: center;
     margin: 0 auto;
 }
 
 
-    .title-main {
+.title-main {
 
-        color: #fff;
-        font-size: 36px;
-        font-weight: 700;
-        max-width: 216px;
-        letter-spacing: 1.12px;
-        line-height: 1.1;
-        margin: 0 auto;
-letter-spacing: 0.02em;
-text-align: center;
-margin-bottom: 72px;
-    }
+    color: #fff;
+    font-size: 36px;
+    font-weight: 700;
+    max-width: 216px;
+    letter-spacing: 1.12px;
+    line-height: 1.1;
+    margin: 0 auto;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 72px;
+}
 
-    .button-main {
-        display: block;
-        min-width: 169px;
-        background-color: #4D5AE5;
-        color: #fff;
-        font-family: Roboto;
-        font-weight: 500;
-        /* margin-top: 48px; */
-        letter-spacing: 0.64px;
-        cursor: pointer;
-        font-family: "Roboto", sans-serif;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        border: none;
-        border-radius: 4px;
-        height: 56px;
-        margin: 0 auto;
-        
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    button:hover {
-        background-color: #404BBF;
-    }
-    
-    button:focus {
-        background-color: #404BBF;
-    }
-    
+.button-main {
+    display: block;
+    min-width: 169px;
+    background-color: #4D5AE5;
+    color: #fff;
+    font-family: Roboto;
+    font-weight: 500;
+    /* margin-top: 48px; */
+    letter-spacing: 0.64px;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    border: none;
+    border-radius: 4px;
+    height: 56px;
+    margin: 0 auto;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+button:hover {
+    background-color: #404BBF;
+}
+
+button:focus {
+    background-color: #404BBF;
+}
 
 
-@media only screen and (min-resolution:192dpi) and (max-width:767px){
-    .benefits{
+
+@media only screen and (min-resolution:192dpi) and (max-width:767px) {
+    .benefits {
         background-image: url(../images/Dark-bg-mob@2x.jpg), url(../images/Dark-bg-mobi@2x.jpg);
     }
 }
 
 /* <!-- SECTION-1 768 =========================--> */
 
-@media only screen and (min-width:768px){
+@media only screen and (min-width:768px) {
     .container {
         max-width: 768px;
+        margin: 0 auto;
+        padding: 0 15px;
     }
-    .benefits{
-    max-width: 768px; 
-    padding: 112px 0px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/Dark-bg-tabl.jpg), url(../images/Dark-bg-tabl-2.jpg);
+
+    .benefits {
+        max-width: 768px;
+        padding: 112px 0px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/Dark-bg-tabl.jpg), url(../images/Dark-bg-tabl-2.jpg);
+    }
+
+    .title-main {
+        font-size: 56px;
+        letter-spacing: 0.02em;
+        max-width: 496px;
+
+        font-weight: 700;
+        margin: 0 auto;
+        margin-bottom: 52px;
+    }
+
 }
 
-.title-main {
-    font-size: 56px;
-    letter-spacing: 0.02em;
-    max-width: 496px;
-  
-    font-weight: 700;
-    margin: 0 auto;
-    margin-bottom: 52px;
-}
-
-}
 
 
-
-@media only screen and (min-resolution:192dpi) and (min-width:768px){
-    .benefits{
+@media only screen and (min-resolution:192dpi) and (min-width:768px) {
+    .benefits {
         background-image: url(../images/Dark-bg-tabl@2x.jpg), url(../images/Dark-bg-tabl@2x-2.jpg);
     }
 
@@ -481,61 +513,148 @@ margin-bottom: 72px;
 
 /* <!-- SECTION-1 1158=========================--> */
 
-@media only screen and (min-width:1158px){
-    .benefits{
+@media only screen and (min-width:1158px) {
+    .benefits {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/bg-desk.jpg), url(../images/Dark-bg-desk.jpg);
-    max-width: 1440px;
-    
-    padding: 188px 0;
+            url(../images/bg-desk.jpg), url(../images/Dark-bg-desk.jpg);
+        max-width: 1440px;
+
+        padding: 188px 0;
     }
+
     .title-main {
 
-        
+
         font-size: 56px;
-        
+
         max-width: 496px;
         letter-spacing: 1.12px;
         line-height: 1.07;
         margin-bottom: 48px;
-        
+
     }
 }
 
-@media only screen and (min-resolution:192dpi) and (min-width:1158px){
-    .benefits{
+@media only screen and (min-resolution:192dpi) and (min-width:1158px) {
+    .benefits {
         background-image: url(../images/Dark-bg-tabl@2x.jpg), url(../images/Dark-bg-tabl@2x-2.jpg);
     }
 
 }
 
 /* ============SECTION-2 ==================== */
-.content{
+.content {
     padding: 96px 0;
 }
 
-.icon-border{
+.icon-border {
     display: none;
+    
 }
-.list-content{
+
+.list-content {
     display: flex;
     flex-direction: column;
-    gap:72px;
+    gap: 72px;
 }
-.title-content{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11111;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-margin-bottom: 8px;
+
+.title-content {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 8px;
 }
+
 .target-txt {
     font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-max-width: 288px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    max-width: 288px;
+}
+
+/* =====SECTION-2 768 */
+@media only screen and (min-width:768px) {
+
+    .list-content {
+
+        flex-direction: row;
+        flex-wrap: wrap;
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+
+    .content-item {
+        width: calc((100%-24px) / 2);
+    }
+
+    .title-content {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11111;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        text-align: left;
+    }
+
+    .target-txt {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+    }
+}
+
+/* =====SECTION-2 1158 */
+@media only screen and (min-width:1158px) {
+
+    .container{
+        max-width: 1158px;
+        padding: 0 15px;
+    }
+    .list-content {
+
+        gap: 24px;
+
+    }
+
+    .content-item {
+        width: calc((100% - 72px) / 4);
+    }
+
+    .title-content {
+
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+
+        letter-spacing: 0.4px;
+        color: #2e2f42;
+    }
+
+    .target-txt {
+        font-weight: 400;
+
+
+        letter-spacing: 0.02em;
+
+    }
+
+    .icon-border {
+        display: block;
+            background-color: #f4f4fd;
+            border: 1px solid #8e8f99;
+            border-radius: 4px;
+            width: 264px;
+            margin-bottom: 8px;
+            height: 112px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    }
 }
