--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ a {
 
 ul {
     list-style: none;
+    margin: 0;
+    padding-left: 0;
 }
 
 h1,
@@ -24,10 +26,7 @@ img {
     display: block;
 }
 
-ul {
-    margin: 0;
-    padding-left: 0;
-}
+
 
 .visually-hidden {
     position: absolute;
@@ -50,7 +49,7 @@ ul {
         top: 0;
         left: 0;
         width: 100%;
-        
+
         z-index: 99999999999;
         opacity: 0;
         visibility: hidden;
@@ -65,21 +64,21 @@ ul {
     .mobile-menu-container {
         position: relative;
         background-color: #FFFFFF;
-display: flex;
-flex-direction: column;
-/* flex-wrap: wrap; */
-flex-basis: auto;
-height: 100vh;
-overflow-y: auto;
-padding-top: 72px;
-padding-bottom: 40px;
+        display: flex;
+        flex-direction: column;
+        /* flex-wrap: wrap; */
+        flex-basis: auto;
+        height: 100vh;
+        overflow-y: auto;
+        padding-top: 72px;
+        padding-bottom: 40px;
 
 
 
     }
-   
-    
-    
+
+
+
 
     .mobile-menu-close-btn {
         border: none;
@@ -108,7 +107,7 @@ padding-bottom: 40px;
         display: flex;
         flex-direction: column;
         gap: 40px;
-        
+
     }
 
     .mobile-menu-link {
@@ -118,6 +117,9 @@ padding-bottom: 40px;
         letter-spacing: 0.02em;
         color: #2e2f42;
     }
+    .mobile-menu-address{
+        margin-bottom: 48px;
+    }
 
     .active {
         color: #404bbf;
@@ -126,7 +128,7 @@ padding-bottom: 40px;
     .mobile-menu-list-address {
         display: flex;
         flex-direction: column;
-        margin-bottom: 48px;
+        
         gap: 24px;
 
     }
@@ -137,7 +139,9 @@ padding-bottom: 40px;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #434455;
+        
     }
+    
 
     .active-address {
         color: #4d5ae5;
@@ -149,7 +153,7 @@ padding-bottom: 40px;
         width: 40px;
         height: 40px;
         display: flex;
-        justify-content:center;
+        justify-content: center;
         align-items: center;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -183,7 +187,7 @@ padding-bottom: 40px;
 
 .container {
     max-width: 320px;
-    padding-left:  16px;
+    padding-left: 16px;
     padding-right: 16px;
     margin: 0 auto;
 }
@@ -192,6 +196,8 @@ padding-bottom: 40px;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
+    padding-top: 17px;
+    padding-bottom: 17px;
 }
 
 span {
@@ -203,7 +209,7 @@ span {
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 700;
-    margin-right: 76px;
+    
     color: #2E2F42;
     line-height: 1.17;
     letter-spacing: 0.03em;
@@ -339,9 +345,9 @@ span {
         gap: 12px;
     }
 
-    address {
+    /* address {
         font-style: normal;
-    }
+    } */
 
     .address-mail {
         color: #434455;
@@ -548,7 +554,7 @@ button:focus {
 
 @media only screen and (min-resolution:192dpi) and (min-width:1158px) {
     .benefits {
-        background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/Dark-bg-tabl@2x.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/Dark-bg-tabl@2x.jpg);
     }
 
 }
@@ -786,7 +792,7 @@ button:focus {
         flex-wrap: wrap;
         justify-content: center;
     }
-    
+
 
 }
 
@@ -795,9 +801,9 @@ button:focus {
 /* =====SECTION-3 1158========================= */
 @media only screen and (min-width:1158px) {
     .list-time {
-        
+
         width: calc((100% - 72px) / 4);
-        
+
     }
 }
 
@@ -805,6 +811,7 @@ button:focus {
 .our-portfolio {
     padding: 96px 0;
 }
+
 .title-portfolio {
     color: #2E2F42;
     text-align: center;
@@ -815,7 +822,8 @@ button:focus {
     letter-spacing: 0.02em;
     text-transform: capitalize;
 }
-.text-card{
+
+.text-card {
     display: none;
 }
 
@@ -824,8 +832,9 @@ button:focus {
     border: 1px solid #e7e9fc;
     border-top: none;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-background: #fff;
+    background: #fff;
 }
+
 .title-portf {
     color: #2E2F42;
     margin-bottom: 8px;
@@ -834,13 +843,15 @@ background: #fff;
     font-weight: 500;
     letter-spacing: 0.02em;
 }
-.content-portf{
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
+
+.content-portf {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
+
 .list-port {
     display: flex;
     flex-wrap: wrap;
@@ -850,7 +861,7 @@ color: #434455;
 
 .item-add {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+
 }
 
 .item-add:hover,
@@ -870,21 +881,22 @@ color: #434455;
 
     .item-add {
         width: calc((100% - 24px) / 2);
-        
+
     }
 }
 
 /* =====SECTION-4 1158=============== */
 @media only screen and (min-width:1158px) {
-    .item-add{ 
-    max-width: calc((100% - 48px) / 3);
+    .item-add {
+        max-width: calc((100% - 48px) / 3);
     }
+
     .container-our-portfolio {
         overflow: hidden;
         position: relative;
         cursor: pointer;
     }
-    
+
     .text-card {
         position: absolute;
         top: 0;
@@ -900,22 +912,26 @@ color: #434455;
         transform: translateY(100%);
         display: block;
     }
-    .addition{
+
+    .addition {
         cursor: pointer;
     }
 }
+
 /* =====FOOTER======================= */
 .container-footer {
     display: flex;
-flex-direction: column;
+    flex-direction: column;
     align-items: baseline;
-    
+
 }
+
 .contact {
     background-color: #2E2F42;
     padding: 96px 0;
 
 }
+
 .logo-footer {
     display: block;
     font-family: "Raleway", sans-serif;
@@ -927,52 +943,61 @@ flex-direction: column;
     text-transform: uppercase;
     color: #4d5ae5;
     background-color: #2E2F42;
-    margin-bottom: 16px;
+    margin-bottom: 17.5px;
     text-align: center;
 }
+
 .studio {
     color: #f4f4fd;
     background-color: #2E2F42;
     text-align: start;
 
 }
-.footer-contact{
+
+.footer-contact {
     margin: 0 auto;
-    margin-bottom: 16px;
+    margin-bottom: 72px;
 }
+
 .content-footer {
-font-weight: 400;
+    font-weight: 400;
     color: #F4F4FD;
     background-color: #2E2F42;
     line-height: 1.5;
     max-width: 288px;
-font-size: 16px;
-    
+    font-size: 16px;
+
     letter-spacing: 0.02em;
 }
+
 .social {
-    
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
-    margin-bottom:  16px;
-    
+    margin-bottom: 16px;
+
 }
-.social-media{
+
+.social-media {
     text-align: center;
     margin: 0 auto;
+    margin-bottom: 72px;
 }
+
 .list-footer {
     display: flex;
     gap: 16px;
-    margin-bottom: 72px;
+   
 }
+
 .footer-link:hover,
 .footer-link:focus {
     background-color: #31d0aa;
 }
+
 .subscribe {
 
     font-weight: 500;
@@ -980,30 +1005,33 @@ font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
-    margin-bottom: 16px; 
+    margin-bottom: 16px;
 
 }
+
 .subscribe-form {
     text-align: center;
 
 
 }
+
 .subscribe-input {
     border: 1px solid #fff;
-border-radius: 4px;
-width: 288px;
-height: 40px;
-font-weight: 400;
-font-size: 12px;
-line-height: 2;
-letter-spacing: 0.04em;
-color: #fff;
-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-opacity: 0.3;
+    border-radius: 4px;
+    width: 288px;
+    height: 40px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    opacity: 0.3;
     background: #2e2f42;
     margin-bottom: 16px;
 
 }
+
 .subscribe-input::placeholder {
     font-weight: 400;
     font-size: 12px;
@@ -1012,8 +1040,9 @@ opacity: 0.3;
     color: #ffffff;
     padding-left: 16px;
 }
+
 .subscribe-btn {
-   
+
     border-radius: 4px;
     padding: 8px 24px;
     min-width: 165px;
@@ -1026,10 +1055,10 @@ opacity: 0.3;
     cursor: pointer;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.04em ;
+    letter-spacing: 0.04em;
     color: #ffffff;
-    margin: 0 auto;
-    
+    margin: 0 auto 96px auto;
+
 }
 
 
@@ -1042,62 +1071,65 @@ opacity: 0.3;
 
 /* =====FOOTER 768=============== */
 
-@media only screen and (min-width:768px)
-{
+@media only screen and (min-width:768px) {
     .container-footer {
         display: flex;
-flex-direction: row;
-    flex-wrap: wrap;
+        flex-direction: row;
+        flex-wrap: wrap;
         align-items: baseline;
         column-gap: 24px;
         width: 552px;
     }
 
-    .logo-footer{
+    .logo-footer {
         display: inline-block;
-       
+
     }
-    .footer-contact{
-        margin:0;
-        
-}
-.social-media{
-    text-align:left;
-    margin: 0;
-}
 
-.subscribe-form {
-    text-align: left;
+    .footer-contact {
+        margin: 0;
+
+    }
+
+    .social-media {
+        text-align: left;
+        margin: 0;
+    }
+
+    .subscribe-form {
+        text-align: left;
 
 
-}
-.footer-form {
-    display: flex;
-    
-   
-    gap: 24px;
-}
+    }
+
+    .footer-form {
+        display: flex;
+
+
+        gap: 24px;
+    }
 
 
 }
 
 /* =====FOOTER 1158=============== */
 @media only screen and (min-width:1158px) {
-    
+
     .container-footer {
         display: flex;
-    
-   
+
+
         align-items: baseline;
         min-width: 1158px;
     }
-    
-    
+
+
     .subscribe-form {
         margin-left: 80px;
-    
-    
+
+
     }
+
     .contact {
         background-color: #2E2F42;
         padding: 100px 0;
@@ -1105,14 +1137,15 @@ flex-direction: row;
     }
 
     .list-footer {
-       margin-bottom: 0px;
+        margin-bottom: 0px;
     }
+
     .item-footer {
         width: 40px;
         height: 40px;
     }
-    
-   
+
+
 }
 
 /* MODAL============================ */
@@ -1127,7 +1160,7 @@ flex-direction: row;
     opacity: 0;
     visibility: hidden;
     background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -1141,12 +1174,12 @@ flex-direction: row;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 288px;
-    min-height: 623px; 
+    min-height: 623px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
     border-radius: 4px;
     padding: 72px 24px 24px 24px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -1166,18 +1199,19 @@ flex-direction: row;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #e7e9fc; 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    border: 1px solid rgba(0, 0, 0, 0.1); 
+    background-color: #e7e9fc;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
     fill: #ffff;
-    border: none; 
+    border: none;
 }
-.modal-close-icon{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+.modal-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-txt {
@@ -1227,14 +1261,15 @@ flex-direction: row;
     padding-left: 38px;
     transition: border-color 250ms linear;
     outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:focus {
     border-color: #4d5ae5;
     outline: transparent;
 }
-.modal-form-block-textarea{
+
+.modal-form-block-textarea {
     margin-bottom: 16px;
 }
 
@@ -1250,12 +1285,12 @@ flex-direction: row;
     font-size: 12px;
     line-height: 1.16667;
     letter-spacing: 0.04em;
-    
-    line-height: 1.17; 
+
+    line-height: 1.17;
     color: rgba(46, 47, 66, 0.4);
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
+
 }
 
 .modal-form-textarea:focus {
@@ -1282,7 +1317,7 @@ flex-direction: row;
     letter-spacing: 0.04em;
     color: #8e8f99;
     margin-bottom: 4px;
-    line-height: 1.17; 
+    line-height: 1.17;
 
 }
 
@@ -1296,24 +1331,25 @@ flex-direction: row;
     top: 50%;
     transform: translateY(-50%);
     fill: #2e2f42;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-checkbox {
     margin-bottom: 24px;
 }
 
-.modal-checkbox:checked + .user-privacy-label .checkbox-span {
+.modal-checkbox:checked+.user-privacy-label .checkbox-span {
     background-color: #404bbf;
-    fill: #F4F4FD; 
-    border: none; 
+    fill: #F4F4FD;
+    border: none;
 }
-.user-privacy-label{
-line-height: 1.17;  
-font-weight: 400;
-font-size: 12px;
-letter-spacing: 0.04em;
-color: #8e8f99; 
+
+.user-privacy-label {
+    line-height: 1.17;
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
 }
 
 .modal-checkbox:focus+.privacy-policy-label .checkbox-span {
@@ -1354,19 +1390,18 @@ color: #8e8f99;
 
 /* =====MODAL 768=============== */
 
-@media only screen and (min-width:768px)
-{
-    .modal{
+@media only screen and (min-width:768px) {
+    .modal {
         width: 408px;
-        min-height: 584px; 
+        min-height: 584px;
     }
 }
+
 /* =====MODAL 1158=============== */
 
-@media only screen and (min-width:1156px)
-{
-    .modal{
-       width: 408px;
-       
+@media only screen and (min-width:1156px) {
+    .modal {
+        width: 408px;
+
     }
 }
