--- a/css/style.css
+++ b/css/style.css
@@ -338,16 +338,16 @@ span {
         border-radius: 2px;
 
     }
-
+ address {
+        font-style: normal;
+    }
     .list-address {
         display: flex;
         flex-direction: column;
         gap: 12px;
     }
 
-    /* address {
-        font-style: normal;
-    } */
+   
 
     .address-mail {
         color: #434455;
@@ -591,7 +591,7 @@ button:focus {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    max-width: 288px;
+    /* max-width: 288px; */
 }
 
 /* =====SECTION-2 768 */
