--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ span {
     }
 
     .header {
-        /* padding: 16px 0; */
+        
         border-bottom: 1px solid #e7e9fc;
         box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
         background: #fff;
@@ -366,10 +366,7 @@ span {
 
 /* ========HEADER 1158========================= */
 @media only screen and (min-width: 1158px) {
-    .header {
-        padding: 24px 0;
-
-    }
+   
 
     .container {
         max-width: 1158px;
@@ -958,8 +955,9 @@ button:focus {
 }
 
 .footer-contact {
-    margin: 0 auto;
-    margin-bottom: 72px;
+    /* margin: 0 auto;
+    margin-bottom: 72px; */
+    
 }
 
 .content-footer {
@@ -1021,7 +1019,7 @@ button:focus {
 .subscribe-input {
     border: 1px solid #fff;
     border-radius: 4px;
-    width: 288px;
+    width: 264px;
     height: 40px;
     font-weight: 400;
     font-size: 12px;
@@ -1116,13 +1114,15 @@ button:focus {
 @media only screen and (min-width:1158px) {
 
     .container-footer {
-
+column-gap: 0px;
         min-width: 1158px;
     }
 
-
+.content-footer{
+    max-width: 264px;
+}
     .subscribe-form {
-        margin-left: 80px;
+        /* margin-left: 80px; */
 
 
     }
