--- a/css/style.css
+++ b/css/style.css
@@ -955,9 +955,8 @@ button:focus {
 }
 
 .footer-contact {
-    /* margin: 0 auto;
-    margin-bottom: 72px; */
-    
+    /* margin: 0 auto; */
+    margin-bottom: 72px;
 }
 
 .content-footer {
@@ -967,7 +966,7 @@ button:focus {
     line-height: 1.5;
     max-width: 288px;
     font-size: 16px;
-    /* margin-bottom: 72px; */
+    
     letter-spacing: 0.02em;
 }
 
@@ -1087,11 +1086,13 @@ button:focus {
 
     }
 
-
+.footer-contact{
+    margin-bottom: 72px;
+}
 
     .social-media {
         text-align: left;
-        margin: 0;
+        margin-bottom: 0;
     }
 
     .subscribe-form {
@@ -1117,7 +1118,12 @@ button:focus {
 column-gap: 0px;
         min-width: 1158px;
     }
-
+    .footer-contact{
+        margin-right: 120px;
+    }
+    .social-media{
+        margin-right: 80px;
+    }
 .content-footer{
     max-width: 264px;
 }
