--- a/css/style.css
+++ b/css/style.css
@@ -956,6 +956,7 @@ button:focus {
 
 .footer-contact {
     /* margin: 0 auto; */
+    max-width: 288px;
     margin-bottom: 72px;
 }
 
@@ -964,7 +965,7 @@ button:focus {
     color: #F4F4FD;
     background-color: #2E2F42;
     line-height: 1.5;
-    max-width: 288px;
+   
     font-size: 16px;
     
     letter-spacing: 0.02em;
@@ -1088,11 +1089,11 @@ button:focus {
 
 .footer-contact{
     margin-bottom: 72px;
+    width: 264px;
 }
 
     .social-media {
-        text-align: left;
-        margin-bottom: 0;
+        margin: 0;
     }
 
     .subscribe-form {
@@ -1124,9 +1125,7 @@ column-gap: 0px;
     .social-media{
         margin-right: 80px;
     }
-.content-footer{
-    max-width: 264px;
-}
+
     .subscribe-form {
         /* margin-left: 80px; */
 
