--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,9 @@ img {
         background-color: #FFFFFF;
         display: flex;
         flex-direction: column;
-
+        justify-content: space-between;
+        padding-left: 16px;
+        padding-right: 16px;
         flex-basis: auto;
         height: 100vh;
         overflow-y: auto;
