--- a/css/style.css
+++ b/css/style.css
@@ -1014,6 +1014,7 @@ button:focus {
 
 .subscribe-form {
     text-align: center;
+    
 
 
 }
@@ -1021,7 +1022,7 @@ button:focus {
 .subscribe-input {
     border: 1px solid #fff;
     border-radius: 4px;
-    width: 264px;
+    width: 288px;
     height: 40px;
     font-weight: 400;
     font-size: 12px;
@@ -1032,6 +1033,7 @@ button:focus {
     opacity: 0.3;
     background: #2e2f42;
     margin-bottom: 16px;
+    
 
 }
 
@@ -1093,6 +1095,9 @@ button:focus {
     margin-bottom: 72px;
     width: 264px;
 }
+.social{
+text-align: left;
+}
 
     .social-media {
         margin: 0;
@@ -1102,6 +1107,9 @@ button:focus {
         text-align: left;
 
 
+    }
+    .subscribe-input{
+        width: 264px;
     }
 
     .footer-form {
